--- a/src/app/secondary-components/publications/publications.component.css
+++ b/src/app/secondary-components/publications/publications.component.css
@@ -31,11 +31,11 @@
     bottom: 1rem;
 }
 
-h2{
+h1, h2{
     font-family: 'Anton', 'Poppins', sans-serif;
 }
 
-.sobre_text {
+.about-text {
     font-family: 'Open Sans', 'Roboto Condensed', 'Lato', sans-serif;
     font-weight: 300;
 }
